chore: Update gitignore to exclude source data folder
- Added data/ to gitignore to reduce repo size
- Kept public/data/ exception for generated runtime files
- Source data (data/) only needed at build time
- Generated files (public/data/*.json) required for website

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # build output
 dist/
-
 # generated types
 .astro/
 
@@ -22,3 +21,8 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+
+# data folder (source files)
+data/
+# Keep generated data files (needed for website to work)
+!public/data/
