Modularisasi script quiz dan perbaiki generasi data karakter
- Buat utility generateQuizData() untuk generate data karakter secara modular
- Tambah komponen CharacterList yang reusable
- Perbaiki parsing three_sizes di characterData.ts
- Ubah dataDir jadi required parameter untuk fleksibilitas path
- Refactor quiz_en.astro dan random_en.astro pakai utility baru
- Tambah QuizFieldPresets untuk konfigurasi field yang umum dipakai
- Perbaiki QuizNewLayout dengan null checks dan dynamic script loading
- Kurangi duplikasi code dari ~80 baris jadi ~10 baris per halaman quiz

--- a/.gitignore
+++ b/.gitignore
@@ -6,21 +6,34 @@ dist/
 # dependencies
 node_modules/
 
+# vite / astro cache
+.vite/
+.cache/
+
 # logs
 npm-debug.log*
-yarn-debug.log*
+yarn-debug.log*w
 yarn-error.log*
 pnpm-debug.log*
 
 # environment variables
 .env
 .env.production
+.env.local
+.env.development
+.env.test
 
-# macOS-specific files
+# system files
 .DS_Store
+Thumbs.db
 
-# jetbrains setting folder
+# editor config folders
 .idea/
+.vscode/
+
+# test & build artifacts
+coverage/
+*.tsbuildinfo
 
 # Keep public/data for runtime
 !public/data/
